--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="google-signin-client_id"
+      content="738593158652-gfrr5c4rkjnitlv60rtsiv8d7o1agp8c.apps.googleusercontent.com.apps.googleusercontent.com"
+    />
     <title>Career Conseiller</title>
   </head>
   <body>
