--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,7 @@
       content="738593158652-gfrr5c4rkjnitlv60rtsiv8d7o1agp8c.apps.googleusercontent.com.apps.googleusercontent.com"
     />
     <title>Career Conseiller</title>
+    <link rel="stylesheet" href="./App.css" />
   </head>
   <body>
     <div id="app"></div>
